--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.6.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
